styles.css
/* Globals */
html {
	color: #ffffffff;
	text-align: center;
	overflow-x: hidden;
	scroll-behavior: smooth;
	font-family: Georgia, serif;
	background-color: #000000ff;
}

header {
	top: 0;
	left: 0;
	right: 0;
	margin: auto;
	height: 112px;
	display: flex;
	position: absolute;
	flex-direction: column;
	padding: 24px 0px 24px 0px;
	justify-content: space-around;
}

footer {
	height: 84px;
	display: flex;
	flex-wrap: wrap;
	color: #c0c0c0ff;
	flex-direction: column;
	justify-content: center;
	margin: 24px 0px 24px 0px;
	padding: 36px 0px 36px 0px;
	font-family: Arial, sans-serif;
}

a { text-decoration: none; }

img { image-rendering: pixelated; }

img, iframe { animation: render 1.6s ease-in-out infinite; }

video {
	width: 100vw;
	height: 100vh;
	opacity: 0.64;
	display: block;
	object-fit: cover;
}

:focus-visible {
	outline-offset: 4px;
	outline: 2px solid #ffffff;
}

/* Classes and IDs */
* {
	border: 0;
	margin: 0;
	padding: 0;
	scroll-behavior: smooth;
}

.h-spacer-16px {
	width: 16px;
	height: 100%;
	user-select: none;
	border-radius: 16px;
	display: inline-block;
}

.reveal { animation: reveal 3s; }

#cover {
	width: auto;
	margin: auto;
	height: 100vh;
	background-size: cover;
	background-repeat: no-repeat;
	background-position: center center;
	background-image: url("assets/images/covers/dane-hobrecht-cover-001.webp");
}

#name {
	& a {
		color: #ffffffff;
		font-weight: 700;
		font-size: 3.06em;
		font-family: Georgia, serif;
	}
}

#navigation {
	margin: auto;
	& a {
		float: left;
		color: #c0c0c0ff;
		font-size: 1.36em;
		transition: 0.32s;
		margin: 0px 6px 0px 6px;
		&:hover { color: #ffffffff; }
	}
	& span { color: #ffffffff; }
}

#content {
	width: 92vw;
	margin: auto;
	max-width: 1280px;
}

#resume {
	margin-top: 16px;
	position: relative;
		overflow-x: scroll;
	overflow-y: clip;
	white-space: nowrap;
	border-radius: 16px;
	scrollbar-width: none; 
	-ms-overflow-style: none;
	scroll-snap-type: x mandatory;
	-webkit-overflow-scrolling: touch;
	&::-webkit-scrollbar { display: none; }
	scroll-margin-top: 16px;
	-ms-scroll-margin-top: 16px;
	-moz-scroll-margin-top: 16px;
	-webkit-scroll-margin-top: 16px;

	#pdf-icon {
		left: 12px;
		z-index: 1;
		width: 32px;
		padding: 8px;
		display: flex;
		position: sticky;
		transition: 0.32s;
		margin-top: -48px;
		margin-left: -48px;
		align-items: center;
		border-radius: 16px;
		top: calc(100% - 60px);  /* Simulate `bottom` (doesn't work with `sticky`) */
		justify-content: center;
		background-color: #000000c3;
		&:hover { opacity: 0.48; }
		& img {
			width: 32px;
			height: 32px;
			animation: none;
			user-select: none;
		}
	}

	#h-scroll-icon {
		z-index: 1;
		width: 32px;
		display: flex;
		position: sticky;
		margin-top: -32px;
		margin-left: -48px;
		align-items: center;
		border-radius: 16px;
		top: calc(100% - 52px);  /* Simulate `bottom` (doesn't work with `sticky`) */
		left: calc(50% - 24px);
		justify-content: center;
		padding: 2px 8px 2px 8px;
		background-color: #000000c3;
		& img {
			width: 32px;
			height: 28px;
			animation: none;
			user-select: none;
		}
	}

	.module {
		font-size: 1.2em;
		text-align: left;
		transition: 0.24s;
		user-select: none;
		position: relative;
		max-width: 21.66em;
		display: inline-block;
		vertical-align: middle;
		scroll-snap-align: start;
		& img {
			float: left;
			width: 100%;
			height: auto;
			transition: 0.24s;
			border-radius: 16px;
		}
		& > label > img { aspect-ratio: 1000 / 1295; }
		& input {
			/* Hide */
			display: none;
			&:not(:checked) + label > img { opacity: 1; }
			&:not(:checked) + label > .information { opacity: 0; }
			&:not(:checked) + label > .information a { pointer-events: none; }
			&:not(:checked) + label > .information p { overflow-y: hidden; }
			/* Show */
			&:checked + label > .info-icon {
				opacity: 0;
				pointer-events: none;
			}
			&:checked + label > img { opacity: 0.16; }
			&:checked + label > .information { opacity: 1; }
			&:checked + label > .information a { pointer-events: auto; }
			&:checked + label > .information p { overflow-y: auto; }
		}
	}

	.info-icon {
		z-index: 1;
		width: 32px;
		height: 32px;
		margin: 12px;
		padding: 8px;
		transition: 0.32s;
		position: absolute;
		border-radius: 16px;
		background-color: #000000c3;
		&:hover  {
			opacity: 0.48;
			cursor: pointer;
		}
		& p {
			color: #ffffffff;
			font-weight: 700;
			align-items: center;
			justify-content: center;
			font-family: Arial, sans-serif;
		}
		& img { animation: none; }
	}

	.information {
		opacity: 0;
		height: 100%;
		padding: 16px;
		display: flex;
		transition: 0.32s;
		position: absolute;
		flex-direction: column;
		mask-image: linear-gradient(180deg, #000000ff 84%, #00000000 100%);
		& h1 {
			font-size: 1.64em;
			font-style: italic;
			padding-right: 2px;
			white-space: pre-wrap;
			font-family: Arial, sans-serif;
		}
		& h2 {
			font-size: 1.12em;
			font-weight: normal;
		}
		& h3 {
			padding: 8px;
			display: block;
			font-size: 1em;
			margin-top: 16px;
			position: relative;
			border-radius: 8px;
			font-weight: normal;
			border: 1px dashed #ffffffff;
			font-family: Arial, sans-serif;
		}
		/* Tickets button */
		& a {
			width: auto;
			color: #000000ff;
			font-weight: 700;
			transition: 0.32s;
			font-size: 1.16em;
			position: relative;
			border-radius: 8px;
			pointer-events: none;
			display: inline-block;
			align-self: flex-start;
			margin: 16px 0px 16px 0px;
			background-color: #ffffffff;
			padding: 12px 16px 12px 16px;
			font-family: Arial, sans-serif;
		}
		& p {
			flex-grow: 1;
			overflow-y: auto;
			font-size: 0.92em;
			padding-right: 6px;
			white-space: normal;
			padding-bottom: 84px;
			scrollbar-width: none;  /* Firefox */
			-ms-overflow-style: none;  /* IE 10+ */
			&::-webkit-scrollbar { display: none; }  /* Chrome, Safari */
		}
		& .enabled { &:hover { opacity: 0.48; } }
		& .disabled {
			opacity: 0.24;
			cursor: not-allowed;
			pointer-events: none;
			& img { animation: none; }
		}
	}
}

#press {
	margin: auto;
	position: relative;
	padding: 36px 0px 36px 0px;
	& table { margin: auto; }
	& a {
		font-size: 0;
		transition: 0.32s;
		display: inline-block;
		&:hover { opacity: 0.72; }
	}
	& object {
		width: 96px;
		height: auto;
		animation: none;
		margin-bottom: 8px;
		pointer-events: none;
	}
	& .adapt { width: 132px; }
	& p {
		color: #ffffffff;
		overflow: hidden;
		font-size: 1.2em;
	}
}

#reel {
	font-size: 0;
	padding-top: 8px;
	margin: 0px -8px -8px -8px;
	& iframe {
		width: 92vw;
		margin: 8px;
		max-width: 580px;
		max-height: 326px;
		border-radius: 16px;
		height: calc(92vw / 1.885);
	}
}

#biography {
	overflow: auto;
	padding-top: 16px;
	margin: 32px 0px -16px 0px;
	& img {
		float: left;
		width: 100%;
		height: auto;
		max-width: 360px;
		user-select: none;
		border-radius: 16px;
		margin: 0px 12px 16px 0px;
	}
	& p {
		text-align: left;
		font-size: 1.16em;
	}
}

#contact {
	width: 92vw;
	max-width: 480px;
	padding-top: 16px;
	margin: 32px auto 0px auto;
	font-family: Arial, sans-serif;
	& #botcheck { display: none; }
	& legend {
		margin: auto;
		font-size: 1.6em;
		font-weight: 700;
		margin-bottom: 8px;
		font-family: Georgia, serif;
	}
	& label {
		font-size: 1em;
		display: block;
		text-align: left;
		margin-bottom: 4px;
	}
	& .required { color: #ff0000ff; }
	& input, textarea, button {
		width: 100%;
		padding: 12px;
		font-size: 1em;
		color: #ffffffff;
		transition: 0.16s;
		border-radius: 8px;
		margin-bottom: 8px;
		box-sizing: border-box;
		background-color: #161616ff;
		font-family: Arial, sans-serif;
	}
	& input:focus, textarea:focus {
		outline: none;
		background-color: #242424ff;
	}
	& textarea {
		resize: vertical;
		min-height: 96px;
		max-height: 184px;
	}
	& button {
		display: flex;
		color: #000000ff;
		font-weight: 700;
		font-size: 1.08em;
		transition: 0.32s;
		align-items: center;
		margin: 12px 0px 12px 0px;
		background-color: #ffffffff;
		&:hover {
			opacity: 0.72;
			cursor: pointer;
		}
		& span {
			margin: auto;
			display: flex;
		}
		& img {
			width: 17.2px;
			height: 17.2px;
			animation: none;
			margin: auto 0px auto 6px;
		}
	}
	& p, a { font-size: 0.96em }
	& p { color: #808080ff; }
	& a { color: #ffffffff; }
}

#socials {
	user-select: none;
	margin: 0px auto 16px auto;
	& a {
		font-size: 0;
		transition: 0.32s;
		display: inline-block;
		&:hover { opacity: 0.72; }
	}
	& object {
		width: 56px;
		margin: 8px;
		height: 100%;
		animation: none;
		pointer-events: none;
		vertical-align: middle;
	}
}

#resources {
	margin: auto;
	user-select: none;
	& a {
		color: #c0c0c0ff;
		font-weight: 600;
		font-size: 0.84em;
		transition: 0.32s;
		user-select: text;
		margin: 0px 4px 0px 4px;
		&:hover { color: #ffffffff; }
	}
}

#redirect {
	top: 50%;
	left: 50%;
	width: 90%;
	opacity: 0;
	color: #ffffffff;
	position: absolute;
	animation: redirect 8.4s;
	transform: translate(-50%, -50%);
	& p {
		margin-top: 8px;
		font-size: 1.12em;
	}
	& a {
		color: #ffffffff;
		font-size: 2.56em;
		font-family: Arial, sans-serif;
	}
}

/* Animations */
@keyframes render {
	0% { background-color: #131313ff; }
	50% { background-color: #131313a3; }
	100% { background-color: #131313ff; }
}

@keyframes reveal {
	0% {
		opacity: 0.01;
		filter: blur(3px);
	}
	100% {
		opacity: 1.00;
		filter: blur(0px);
	}
}

@keyframes redirect {
	0% {
		opacity: 0;
		filter: blur(3px);
	}
	25% {
		opacity: 1;
		filter: blur(0px);
	}
	50% {
		opacity: 1;
		filter: blur(0px);
	}
	75% {
		opacity: 1;
		filter: blur(0px);
	}
	100% {
		opacity: 0;
		filter: blur(3px);
	}
}

/* Resolutions */
@media screen and (min-width: 1025px) {
	#resume .module { max-width: calc((100% - 32px) / 3); }
}

@media screen and (min-width: 321px) and (max-width: 1024px) {
	#resume .module { scroll-snap-align: center; }
}

@media screen and (min-width: 321px) and (max-width: 767px) {
	header { height: 96px; }
	#name { & a { font-size: 2.24em; } }
	#navigation { & a { font-size: 1.24em; } }
	.module { & img { max-width: 500px; } }
}

@media screen and (max-width: 320px) {
	header { height: 80px; }
	#name { & a { font-size: 1.86em; } }
	#navigation { & a { font-size: 0.96em; } }
}

